2024-08-23 Xi Ruoyao <xry111@xry111.site>
   * In console, detect FB console by checking /sys/class/graphics/fbcon
     instead of fb0.  The latter does not exist if CONFIG_FB=n, but
     CONFIG_DRM_FBDEV_EMULATION=y can support a FB console without
     CONFIG_FB.

2024-07-12 Xi Ruoyao <xry111@xry111.site>
   * In mountvirtfs, recreate /dev/fd correctly if it's already created
     by the initramfs.

2024-07-06 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Add logic to init-functions to only print escape sequences
	  if stdin and stdout are connected to a terminal.

2024-04-16 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Remove blank output line generated in ifup script when bringing
	  up wireless interface.

2023-10-04 Pierre Labastie <pierre.labastie@neuf.fr>
   * After the changes done on 2022-03-24, several "halt stop" should
     have been changed to "halt start". Done now. Fortunately, those
     occur only when something wrong happens with disks or devices.

2023-07-28 Xi Ruoyao <xry111@xry111.site>
   * In mountvirtfs, mount /sys/fs/cgroup for udev from systemd-254.

2023-07-22 Xi Ruoyao <xry111@xry111.site>
   * In mountvirtfs, create symlinks /dev/{fd,std{in,out,err}} and
     /dev/core (optional).

2023-07-16 Xi Ruoyao <xry111@xry111.site>
   * In udev, set SYSTEMD_LOG_TARGET=kmsg so systemd-udevd will correctly
     log messages.

2023-07-15 Xi Ruoyao <xry111@xry111.site>
   * Use /bin/udevadm instead of /sbin/udevadm.

2022-09-30 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Mount /dev/shm as a tmpfs.

2022-07-23 Thomas Trepl <thomas@linuxfromscratch.org>
   * Mark an raid array clean when root (/) has been remounted
     r/o when system goes down. Otherwise, array does remain
     always 'dirty', causing a resync at next boot.

2022-03-24 Pierre Labastie <pierre dot labastie at neuf dot fr>
   * New semantics for K and S scripts:
     - S scripts only started if not already marked S in the previous runlevel