@@ -94,7 +94,7 @@ NOTES
                  compound device such as a bridge.
 
        ONBOOT  - If set to 'yes', the specified interface is
-                 configured by the netowrk boot script.
+                 configured by the network boot script.
 
        GATEWAY - The default IP address to use for routing if
                  the destination IP address is not in a static
@@ -112,7 +112,7 @@ NOTES
                  This list is normally a single value, e.g. eth0,
                  for use with a virtual host such as kvm.
 
-       Other paramters that are service specific include:
+       Other parameters that are service specific include:
 
        ipv4-static
 
@@ -128,7 +128,7 @@ NOTES
                      additional IP addresses to a network
                      device.  Example: eth0:2 (optional)
 
-         BROADCAST - The brodcast address for this interface,
+         BROADCAST - The broadcast address for this interface,
                      e.g 192.168.1.255.  If not specified,
                      the broadcast address will be calculated
                      from the IP and PREFIX.
@@ -154,7 +154,7 @@ NOTES
          DHCP_START - Optional parameters to pass to the dhcp client
                       at startup.
 
-         DHCP_STOP  - Optional paremeters to pass to the dhcp client
+         DHCP_STOP  - Optional parameters to pass to the dhcp client
                       at shutdown.
 
          PRINTIP    - Flag to print the dhcp address to stdout
